examples/test/testpolicy7513.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7513
  namespace: namespace356
spec:
  podSelector:
    matchLabels:
      key12: value14
      key3: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value26
          key34: value37
      podSelector:
        matchLabels:
          key43: value24
          key25: value1
